delete jwt
