# cmd/menshend/server.go
@@ -1,88 +1,76 @@
 package main
 
 import (
-  //  "github.com/gorilla/mux"
-  //  "fmt"
     . "github.com/nebtex/menshend/pkg/config"
     "net/http"
     "strings"
+    "github.com/gorilla/mux"
 )
 
 func getSubDomain(s string) string {
-    return strings.TrimSuffix(s, Config.Host)
+    return strings.TrimSuffix(s, Config.Host())
     
 }
 
-func proxy(response http.ResponseWriter, request *http.Request) {
-  
-}
 
 func mainHandler(response http.ResponseWriter, request *http.Request) {
-    //get subdomain
-    subdomain := getSubDomain(request.Host)
-    if subdomain == Config.MenshendSubdomain {
-        //add api router
-        //set cors
-        // add flash endpoin
-        // proxy impersonate
-        //proxy login
+   
+    
+}
+
+func proxyServer() http.Handler {
+    r := mux.NewRouter()
+    handler := TokenRealmSecurityHandler(RoleHandler(GetServiceHandler(ImpersonateWithinRoleHandler(ProxyHandlers()))))
+    handler = GetSubDomainHandler(DetectBrowser(PanicHandler(NeedLogin(handler))))
+    r.Host("{subdomain:[a-z\\-]+}." + Config.HostWithoutPort()).Handler(handler)
+    return r
+}
+
+func uiServer() http.Handler {
+    r := mux.NewRouter()
+    handler := TokenRealmSecurityHandler(RoleHandler(GetServiceHandler(ImpersonateWithinRoleHandler(ProxyHandlers()))))
+    handler = GetSubDomainHandler(DetectBrowser(PanicHandler(NeedLogin(handler))))
+    r.Host("{subdomain:[a-z\\-]+}." + Config.HostWithoutPort()).Handler(handler)
+    return r
+}
+
+/*
+func setToken(u *User, expiresIn int64, response *restful.Response, hasCSRF bool) {
+    expireAt := MakeTimestampMillisecond()
+    if expiresIn == 0 {
+        expireAt += Config.DefaultTTL
+    } else {
+        expireAt += expiresIn
+    }
+    u.SetExpiresAt(expireAt)
+    
+    if !hasCSRF {
+        response.AddHeader("X-Menshend-Token", u.GenerateJWT())
         
     } else {
-        proxy(response, request)
+        ct := &http.Cookie{Path: "/", Name: "X-Menshend-Token", Value: u.GenerateJWT(),
+            Expires: time.Unix(u.ExpiresAt / 1000, 0),
+            HttpOnly:true }
+        
+        ct.Domain = "." + Config.HostWithoutPort()
+        
+        if Config.Scheme == "https" {
+            ct.Secure = true
+        }
+        http.SetCookie(response.ResponseWriter, ct)
+        
     }
+}
+func setExpirationTime(u *User, expiresIn int64) *User {
+    expireAt := MakeTimestampMillisecond()
+    if expiresIn == 0 {
+        expireAt += Config.DefaultTTL
+    } else {
+        expireAt += expiresIn
+    }
+    u.SetExpiresAt(expireAt)
+    return u
     
 }
-
-func serve() {
-   /* r := mux.NewRouter()
-    
-    fmt.Println(Config.Host)
-    
-    //menshend app
-    menshendRouter := r.Host(Config.HostWithoutPort()).Subrouter()
-    
-    //login api
-    menshendRouter.Path("/v1/api/auth/login/token").HandlerFunc(TokenLoginHandler).Methods("POST")
-    menshendRouter.Path("/v1/api/auth/login/userpass/{username}").HandlerFunc(UserPasswordHandler).Methods("POST")
-    menshendRouter.Path("/v1/api/auth/login/github").HandlerFunc(UserPasswordHandler).Methods("POST")
-    menshendRouter.Path("/v1/api/auth/menshend/token").HandlerFunc(UserPasswordHandler).Methods("DELETE")
-    
-    //admin api
-    // this endpoints provide the CRUD operation to manage the services and roles
-    menshendRouter.Path("/v1/api/admin/role/{role}").Handler(NeedLogin(NeedAdmin(http.HandlerFunc(DeleteServiceHandler)))).Methods("DELETE")
-    menshendRouter.Path("/v1/api/admin/role/{role}/service/{subDomain}").Handler(NeedLogin(NeedAdmin(http.HandlerFunc(CreateEditServiceHandler)))).Methods("PUT")
-    menshendRouter.Path("/v1/api/admin/role/{role}/service/{subDomain}").Handler(NeedLogin(NeedAdmin(http.HandlerFunc(DeleteServiceHandler)))).Methods("DELETE")
-    menshendRouter.Path("/v1/api/admin/role/{role}/service/{subDomain}").Handler(NeedLogin(NeedAdmin(http.HandlerFunc(GetServiceHandler)))).Methods("GET")
-    
-    //client api
-    //provide basic features that allow to any user list the services in the ui
-    menshendRouter.Path("/v1/api/client/services").Handler(NeedLogin(http.HandlerFunc(ServiceListHandler)))
-    menshendRouter.Path("/v1/api/client/status").Handler(http.HandlerFunc(LoginStatusHandler))
-    
-    //secrets api
-    menshendRouter.Path("/v1/api/secrets/{app}/read/{secretPath}").Handler(http.HandlerFunc(LoginStatusHandler)).Methods("GET")
-    
-    //impersonate api
-    //impersonate other users
-    menshendRouter.Path("/v1/api/impersonate").Handler(NeedLogin(http.HandlerFunc(ImpersonateHandler))).Methods("POST")
-    
-    //space api
-    //get info about the space
-    menshendRouter.Path("/v1/api/space").Handler(NeedLogin(http.HandlerFunc(ImpersonateHandler)))
-    
-    
-    //ui
-    menshendRouter.Path("/ui/login/*").Handler(NeedLogin(http.HandlerFunc(ImpersonateHandler)))
-    menshendRouter.Path("/ui/v1/*").Handler(NeedLogin(http.HandlerFunc(ImpersonateHandler)))
-    
-    //flash message  api
-    menshendRouter.Path("/ui/messages/flash").HandlerFunc(UserPasswordHandler)
-    //static
-    menshendRouter.Path("/ui/static").Handler(NeedLogin(http.HandlerFunc(ImpersonateHandler)))
-    
-    //menshendServerHandlers(r.Host("menshend." + BaseDomain).Subrouter())
-    //ProxyHandlers(r.Host("{subdomain:.+}." + BaseDomain).Subrouter())*/
-    
-}
-
+*/
 
